--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Squirtle's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/styles.css">
-  
+  <link rel="stylesheet" href="./assets/css/home.css">
+   <link rel="stylesheet" href="./assets/css/index.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
@@ -26,7 +26,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <div class="card1">
         <h2>About Me</h2>
         <p>As a junior web developer, I am just starting out in the exciting world of web development. I have a passion for creating responsive and visually appealing builds that provide a seamless user experience on any device.</p>
 
@@ -38,7 +38,7 @@
         
       </div> 
 
-      <div class="card">
+      <div class="card2">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
