--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/aboutMe.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
 <title>Squirtle's Portfolio</title>
@@ -28,7 +29,53 @@
     </header>
 
     <main>
+<div class="container">
+    <h3>About Me</h3>
+    <div class="fn_cs_news">
+        <div class="news_part">
+            <div class="left_items">
+                <div class="blog__item">
+                    <div class="container">
+                        <span class="cc">
+                            <span>01</span>
+                        </span> 
+                    </div>
+                    <div class="meta"> <p>15/05/22</p> </div>
+                    <div class="title"> <h3>car</h3> </div>
+                    <div class="img"></div>
+                    <div class="read_more"></div>
+                </div>
+            </div>
+            <div class="right_items">
+                <div class="blog__item">
+                    <div class="container">
+                        <span class="cc">
+                            <span>02</span>
+                        </span> 
+                    </div>
+                    <div class="meta"> <p>15/05/22</p> </div>
+                    <div class="title"> <h3>far</h3> </div>
+                    <div class="img"></div>
+                    <div class="read_more"></div>
+                </div>
+                <div class="blog__item">
+                    <div class="container">
+                        <span class="cc">
+                            <span>03</span>
+                        </span> 
+                    </div>
+                    <div class="meta"> <p>15/05/22</p> </div>
+                    <div class="title"> <h3>bar</h3> </div>
+                    <div class="img"></div>
+                    <div class="read_more"></div>
+                </div>
+            </div>
 
+        </div>
+    </div>
+
+
+</div>
     </main>
     <footer>
         <p>&copy;2023 Deanna keel</p>
