--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Squirtle Portfolio</title>
 
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
 
     <!-- Css Style Sheet -->
-    <link rel="stylesheet" href="./assets/css/home.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/main.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/header.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/footer.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/projects.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/404page.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/about.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/photos.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/projects.css" type="text/css">
-
-
+    <link rel="stylesheet" href="./assets/css/home.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/main.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/header.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/footer.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/projects.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/404page.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/about.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/photos.css" type="text/css" />
   </head>
   <body>
     <header class="header">
@@ -48,9 +49,8 @@
     <main class="main-container home-section">
       <section id="home">
         <div class="landing-page-details">
-          <h1 class="small-tiltle">Hi,</h1>
-          <h2 class="big-title">
-            I'm <span class="my-name pink">Deanna</span>
+          <h1 class="small-title">Hi,</h1>
+          <h2 class="big-title"> I'm <span class="my-name pink">Deanna</span>
           </h2>
           <h3 class="medium-title">
             <em>Junior WebDeveloper and cyber security enthusiast</em>
@@ -97,8 +97,9 @@
       <section class="projects" id="select-projects">
         <h2>Select Projects</h2>
         <p class="section-discription">
-          Here are some personal projects i have worked on.<br>
-          you can find more on <a class="hyperlink" href="https://github.com/squirtle22">GitHub</a>
+          Here are some personal projects i have worked on.<br />
+          you can find more on
+          <a class="hyperlink" href="https://github.com/squirtle22">GitHub</a>
         </p>
         <div class="cta-container">
           <a href="/projects" class="cta">
@@ -113,63 +114,61 @@
       <div class="footer">
         <div class="footer-column">
           <a href="/" class="footer-logo">@squirtle22</a>
+          <div class="socials">
+            <ul>
+              <li class="social-link">
+                <a
+                  href="https://linkedin.com/in/squirtle"
+                  aria-label="Linkedin"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="social-link">
+                <a
+                  href="https://github.com/squirtle22"
+                  aria-label="GitHub"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </li>
+              <li class="social-link">
+                <a
+                  href="https://instagram.com/deedee009"
+                  aria-label="Instagram"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <span class="coppyright"
+            ><i class="fa-regular fa-copyright"></i> Deanna keel 2023</span
+          >
         </div>
-        <div class="social">
-          <ul>
-            <li class="social-link">
-              <a
-                href="https://linkedin.com/in/squirtle"
-                aria-label="Linkedin"
-                target="_blank"
-              >
-                <i class="fa-brands fa-linkedin-in"></i>
-              </a>
-            </li>
-            <li class="social-link">
-              <a
-                href="https://github.com/squirtle22"
-                aria-label="GitHub"
-                target="_blank"
-              >
-                <i class="fa-brands fa-github"></i>
-              </a>
-            </li>
-            <li class="social-link">
-              <a
-                href="https://instagram.com/deedee009"
-                aria-label="Instagram"
-                target="_blank"
-              >
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-column">
+          <a href="/about" class="footer-button">
+            <img src="assets/img/smile.svg" alt="Smile Icon" />
+            About
+          </a>
+          <a href="/projects" class="footer-button">
+            <img src="assets/img/coding.svg" alt="Code Icon" />
+            Projects
+          </a>
         </div>
-        <span class="coppyright"
-          ><i class="fa-regular fa-copyright"></i> Deanna keel 2023</span
-        >
-      </div>
-      <div class="footer-column">
-        <a href="/about" class="footer-button">
-          <img src="assets/img/smile.svg" alt="Smile Icon">
-          About
-        </a>
-        <a href="/projects" class="footer-button">
-          <img src="assets/img/coding.svg" alt="Code Icon">
-          Projects
-        </a>
-      </div>
-      <div class="footer-column">
-        <a href="https://futurejones.co.uk/" class="footer-button">
-          <img src="assets/img/camera.svg" alt="Camara Icon">
-          Wedding
-        </a>
-        <a href="mailto:admin@squirtle22.co.uk" class="footer-button">
-          <img src="assets/img/email.svg" alt="Email Icon">
-          Contact
-        </a>
-      </div>
-    </div>
+        <div class="footer-column">
+          <a href="https://futurejones.co.uk/" class="footer-button">
+            <img src="assets/img/camera.svg" alt="Camara Icon" />
+            Wedding
+          </a>
+          <a href="mailto:admin@squirtle22.co.uk" class="footer-button">
+            <img src="assets/img/email.svg" alt="Email Icon" />
+            Contact
+          </a>
+        </div>
     </footer>
 
     <script src="./js/main.js"></script>
