--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <a href="./projects">Projects</a>
           </li>
           <li class="nav-item">
+            <a href="./cyber">Cyber-Security</a>
+          </li>
+          <li class="nav-item">
             <a href="./contact">Contact</a>
           </li>
         </ul>
