--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="./about">About</a>
           </li>
           <li class="nav-item">
-            <a href="./projects">Projects</a>
+            <a href="./projects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a href="./cyber">Cyber-Security</a>
