Project page work
First project styled

--- a/projects.html
+++ b/projects.html
@@ -13,14 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 
     <!-- Css Style Sheet -->
-    <link rel="stylesheet" href="./assets/css/home.css" type="text/css" />
     <link rel="stylesheet" href="./assets/css/main.css" type="text/css" />
     <link rel="stylesheet" href="./assets/css/header.css" type="text/css" />
     <link rel="stylesheet" href="./assets/css/footer.css" type="text/css" />
     <link rel="stylesheet" href="./assets/css/projects.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/404page.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/about.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/photos.css" type="text/css" />
+
 </head>
 
 <body>
@@ -44,32 +41,46 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div>
-            <ul>
-                <li>
-                    <img src="" alt="" srcset="">
-                    <a href="./assets/projects/random-qoute/index.html" target="_blank">random-qoute</a>
-                    <p>Made a random quote generator with basic html css and js</p>
-                </li>
-                <li>
-                    <img src="" alt="" srcset="">
-                    <a href="./assets/projects/random-qoute/index.html" target="_blank">random-qoute</a>
-                    <p>Made a random quote generator with basic html css and js</p>
-                </li>
-                <li>
-                    <img src="" alt="" srcset="">
-                    <a href="./assets/projects/random-qoute/index.html" target="_blank">random-qoute</a>
-                    <p>Made a random quote generator with basic html css and js</p>
-                </li>
-                <li>
-                    <img src="" alt="" srcset="">
-                    <a href="./assets/projects/random-qoute/index.html" target="_blank">random-qoute</a>
-                    <p>Made a random quote generator with basic html css and js</p>
-                </li>
-                
-            </ul>
-        </div>
+    <main class="main-container project-section">
+        <section class="projects">
+            <div class="page-title">
+                <img src="/assets/img/coding.svg" alt="Code Icon">
+                <h2>Deanna.<span class="pink">projects</span></h2>
+            </div>
+            <p class="section-description">
+                See <a class="hyperlink" href="https://github.com/squirtle22" target="_blank">GitHub</a> profile for
+                more details.
+            </p>
+            <div class="project-cards-container">
+                <div class="card">
+                    <img src="/assets/img/project-preview/generator.png" alt="project screenshot"
+                        class="card-preview-img">
+                    <div class="card-info">
+                        <div class="title-and-links">
+                            <span class="project-title">
+                                Inspirational quote generator
+                            </span>
+                            <div class="project-links">
+                                <a href="./assets/projects/random-qoute/index.html" target="_blank">
+                                    <i class="fas fa-external-link-alt"></i>
+                                </a>
+                                <a href="https://github.com/squirtle22/random-qoute" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="project-skills">
+                            <span>HTML</span>
+                            <span>JS</span>
+                            <span>CSS</span>
+                        </div>
+                        <p class="project-description">
+                            insperational random quote generater. The beginning of utilizing knowledge learnt from team
+                            tree house. Project is built with HTML, CSS and JS.
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
